deploy: 600986cdf7a0ab00363f29e3fa56cfa2dc7435a6

--- a/_modules/saltproc/app.html
+++ b/_modules/saltproc/app.html
@@ -459,8 +459,8 @@
     <span class="c1"># Intializing objects</span>
     <span class="n">serpent</span> <span class="o">=</span> <span class="n">DepcodeSerpent</span><span class="p">(</span>
         <span class="n">exec_path</span><span class="o">=</span><span class="n">exec_path</span><span class="p">,</span>
-        <span class="n">template_fname</span><span class="o">=</span><span class="n">template_file</span><span class="p">,</span>
-        <span class="n">input_fname</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
+        <span class="n">template_path</span><span class="o">=</span><span class="n">template_file</span><span class="p">,</span>
+        <span class="n">input_path</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
         <span class="n">iter_matfile</span><span class="o">=</span><span class="n">iter_matfile</span><span class="p">,</span>
         <span class="n">geo_file</span><span class="o">=</span><span class="n">geo_file</span><span class="p">,</span>
         <span class="n">npop</span><span class="o">=</span><span class="n">neutron_pop</span><span class="p">,</span>
