--- a/_modules/saltproc/tests/test_materialflow.html
+++ b/_modules/saltproc/tests/test_materialflow.html
@@ -79,9 +79,9 @@
 
 <span class="n">serpent</span> <span class="o">=</span> <span class="n">DepcodeSerpent</span><span class="p">(</span>
     <span class="n">exec_path</span><span class="o">=</span><span class="s1">&#39;/home/andrei2/serpent/serpent2/src_2131/sss2&#39;</span><span class="p">,</span>
-    <span class="n">template_fname</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span>
+    <span class="n">template_path</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span>
     <span class="s1">&#39;/template.inp&#39;</span><span class="p">,</span>
-    <span class="n">input_fname</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
+    <span class="n">input_path</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
     <span class="n">iter_matfile</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span>
     <span class="s1">&#39;/material&#39;</span><span class="p">,</span>
     <span class="n">geo_file</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
