--- a/_modules/saltproc/simulation.html
+++ b/_modules/saltproc/simulation.html
@@ -139,8 +139,8 @@
             <span class="nb">print</span><span class="p">(</span><span class="s2">&quot;</span><span class="se">\n</span><span class="s2">Step #</span><span class="si">%i</span><span class="s2"> has been started&quot;</span> <span class="o">%</span> <span class="p">(</span><span class="n">dts</span> <span class="o">+</span> <span class="mi">1</span><span class="p">))</span>
             <span class="k">if</span> <span class="n">dts</span> <span class="o">==</span> <span class="mi">0</span><span class="p">:</span>  <span class="c1"># First step</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">write_depcode_input</span><span class="p">(</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">template_fname</span><span class="p">,</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_fname</span><span class="p">,</span>
+                    <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">template_path</span><span class="p">,</span>
+                    <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_path</span><span class="p">,</span>
                     <span class="n">reactor</span><span class="p">,</span>
                     <span class="n">dts</span><span class="p">,</span>
                     <span class="kc">False</span><span class="p">)</span>
@@ -151,7 +151,7 @@
                 <span class="bp">self</span><span class="o">.</span><span class="n">store_run_init_info</span><span class="p">()</span>
                 <span class="c1"># Parse and store data for initial state (beginning of dts)</span>
                 <span class="n">mats</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">read_dep_comp</span><span class="p">(</span>
-                    <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_fname</span><span class="p">,</span>
+                    <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_path</span><span class="p">,</span>
                     <span class="kc">False</span><span class="p">)</span>
                 <span class="bp">self</span><span class="o">.</span><span class="n">store_mat_data</span><span class="p">(</span><span class="n">mats</span><span class="p">,</span> <span class="n">dts</span><span class="p">,</span> <span class="s1">&#39;before_reproc&#39;</span><span class="p">)</span>
             <span class="c1"># Finish of First step</span>
@@ -161,7 +161,7 @@
                     <span class="bp">self</span><span class="o">.</span><span class="n">core_number</span><span class="p">,</span>
                     <span class="bp">self</span><span class="o">.</span><span class="n">node_number</span><span class="p">)</span>
             <span class="n">mats</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">read_dep_comp</span><span class="p">(</span>
-                <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_fname</span><span class="p">,</span>
+                <span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_path</span><span class="p">,</span>
                 <span class="kc">True</span><span class="p">)</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">store_mat_data</span><span class="p">(</span><span class="n">mats</span><span class="p">,</span> <span class="n">dts</span><span class="p">,</span> <span class="s1">&#39;before_reproc&#39;</span><span class="p">)</span>
             <span class="bp">self</span><span class="o">.</span><span class="n">store_run_step_info</span><span class="p">()</span>
@@ -463,7 +463,7 @@
 <span class="sd">        beginning of the Serpent iteration input file.</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="n">geo_line_n</span> <span class="o">=</span> <span class="mi">5</span>
-        <span class="n">f</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_fname</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span>
+        <span class="n">f</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_path</span><span class="p">,</span> <span class="s1">&#39;r&#39;</span><span class="p">)</span>
         <span class="n">data</span> <span class="o">=</span> <span class="n">f</span><span class="o">.</span><span class="n">readlines</span><span class="p">()</span>
         <span class="n">f</span><span class="o">.</span><span class="n">close</span><span class="p">()</span>
 
@@ -479,7 +479,7 @@
         <span class="n">new_data</span> <span class="o">=</span> <span class="p">[</span><span class="n">d</span><span class="o">.</span><span class="n">replace</span><span class="p">(</span><span class="n">current_geo_file</span><span class="p">,</span> <span class="n">new_geo_file</span><span class="p">)</span> <span class="k">for</span> <span class="n">d</span> <span class="ow">in</span> <span class="n">data</span><span class="p">]</span>
         <span class="nb">print</span><span class="p">(</span><span class="s1">&#39;Switching to next geometry file: &#39;</span><span class="p">,</span> <span class="n">new_geo_file</span><span class="p">)</span>
 
-        <span class="n">f</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_fname</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span>
+        <span class="n">f</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">sim_depcode</span><span class="o">.</span><span class="n">input_path</span><span class="p">,</span> <span class="s1">&#39;w&#39;</span><span class="p">)</span>
         <span class="n">f</span><span class="o">.</span><span class="n">writelines</span><span class="p">(</span><span class="n">new_data</span><span class="p">)</span>
         <span class="n">f</span><span class="o">.</span><span class="n">close</span><span class="p">()</span></div>
 
