--- a/_modules/saltproc/tests/test_app.html
+++ b/_modules/saltproc/tests/test_app.html
@@ -82,8 +82,8 @@
 <span class="n">dot_input</span> <span class="o">=</span> <span class="n">directory</span> <span class="o">+</span> <span class="s1">&#39;/test.dot&#39;</span>
 
 <span class="n">serpent</span> <span class="o">=</span> <span class="n">DepcodeSerpent</span><span class="p">(</span><span class="n">exec_path</span><span class="o">=</span><span class="s1">&#39;sss2&#39;</span><span class="p">,</span>
-                         <span class="n">template_fname</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span> <span class="s1">&#39;/template.inp&#39;</span><span class="p">,</span>
-                         <span class="n">input_fname</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
+                         <span class="n">template_path</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span> <span class="s1">&#39;/template.inp&#39;</span><span class="p">,</span>
+                         <span class="n">input_path</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
                          <span class="n">iter_matfile</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span> <span class="s1">&#39;/material&#39;</span><span class="p">,</span>
                          <span class="n">geo_file</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
 
