deploy: d418ae4003493b407cc2b4f6d68b98a2faa36137

--- a/_modules/saltproc/app.html
+++ b/_modules/saltproc/app.html
@@ -417,7 +417,7 @@
 
 <span class="sd">    Returns</span>
 <span class="sd">    --------</span>
-<span class="sd">    dict</span>
+<span class="sd">    refilled_mats: dict</span>
 <span class="sd">        Dictionary that contains `Materialflow` objects.</span>
 
 <span class="sd">        ``key``</span>
