--- a/src/saltproc.app.html
+++ b/src/saltproc.app.html
@@ -205,7 +205,7 @@ extraction process efficiency for each target chemical element.</p>
 </ul>
 </dd>
 <dt class="field-even">Returns</dt>
-<dd class="field-even"><p><p>Dictionary that contains <cite>Materialflow</cite> objects.</p>
+<dd class="field-even"><p><p><strong>refilled_mats</strong> – Dictionary that contains <cite>Materialflow</cite> objects.</p>
 <dl class="simple">
 <dt><code class="docutils literal notranslate"><span class="pre">key</span></code></dt><dd><p>Name of burnable material.</p>
 </dd>
