update docs at commit: Merge pull request #98 from yardasol/generalize-simulation
Prepare `Simulation` and `App` classes for OpenMC support, rework input file structure d82e4f49b1f8114020ddcae731ffe94f6d4686ca

--- a/master/_modules/index.html
+++ b/master/_modules/index.html
@@ -69,20 +69,17 @@
            <div itemprop="articleBody">
              
   <h1>All modules for which code is available</h1>
-<ul><li><a href="saltproc/app.html">saltproc.app</a></li>
-<li><a href="saltproc/depcode.html">saltproc.depcode</a></li>
+<ul><li><a href="saltproc/depcode.html">saltproc.depcode</a></li>
 <li><a href="saltproc/materialflow.html">saltproc.materialflow</a></li>
 <li><a href="saltproc/process.html">saltproc.process</a></li>
 <li><a href="saltproc/reactor.html">saltproc.reactor</a></li>
 <li><a href="saltproc/separator.html">saltproc.separator</a></li>
 <li><a href="saltproc/simulation.html">saltproc.simulation</a></li>
 <li><a href="saltproc/sparger.html">saltproc.sparger</a></li>
-<li><a href="saltproc/tests/test_app.html">saltproc.tests.test_app</a></li>
 <li><a href="saltproc/tests/test_depcode.html">saltproc.tests.test_depcode</a></li>
 <li><a href="saltproc/tests/test_materialflow.html">saltproc.tests.test_materialflow</a></li>
 <li><a href="saltproc/tests/test_process.html">saltproc.tests.test_process</a></li>
 <li><a href="saltproc/tests/test_separator.html">saltproc.tests.test_separator</a></li>
-<li><a href="saltproc/tests/test_simulation.html">saltproc.tests.test_simulation</a></li>
 <li><a href="saltproc/tests/test_sparger.html">saltproc.tests.test_sparger</a></li>
 </ul>
 
