--- a/master/_modules/saltproc/tests/test_process.html
+++ b/master/_modules/saltproc/tests/test_process.html
@@ -80,16 +80,16 @@
 <span class="n">sys</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="n">path</span><span class="p">)))</span>
 <span class="c1"># global class object</span>
 <span class="n">directory</span> <span class="o">=</span> <span class="n">os</span><span class="o">.</span><span class="n">path</span><span class="o">.</span><span class="n">dirname</span><span class="p">(</span><span class="n">path</span><span class="p">)</span>
-<span class="n">input_file</span> <span class="o">=</span> <span class="n">directory</span> <span class="o">+</span> <span class="s1">&#39;/test&#39;</span>
+<span class="n">iter_inputfile</span> <span class="o">=</span> <span class="n">directory</span> <span class="o">+</span> <span class="s1">&#39;/test&#39;</span>
 
 <span class="n">serpent</span> <span class="o">=</span> <span class="n">DepcodeSerpent</span><span class="p">(</span>
     <span class="n">exec_path</span><span class="o">=</span><span class="s1">&#39;/home/andrei2/serpent/serpent2/src_2131/sss2&#39;</span><span class="p">,</span>
-    <span class="n">template_path</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span>
+    <span class="n">template_inputfile_path</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span>
     <span class="s1">&#39;/template.inp&#39;</span><span class="p">,</span>
-    <span class="n">input_path</span><span class="o">=</span><span class="n">input_file</span><span class="p">,</span>
+    <span class="n">iter_inputfile</span><span class="o">=</span><span class="n">iter_inputfile</span><span class="p">,</span>
     <span class="n">iter_matfile</span><span class="o">=</span><span class="n">directory</span> <span class="o">+</span>
     <span class="s1">&#39;/material&#39;</span><span class="p">,</span>
-    <span class="n">geo_file</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
+    <span class="n">geo_files</span><span class="o">=</span><span class="kc">None</span><span class="p">)</span>
 
 <span class="n">process</span> <span class="o">=</span> <span class="n">Process</span><span class="p">(</span><span class="n">mass_flowrate</span><span class="o">=</span><span class="mi">10</span><span class="p">,</span>
                   <span class="n">capacity</span><span class="o">=</span><span class="mf">99.0</span><span class="p">,</span>
@@ -98,7 +98,7 @@
 
 
 <div class="viewcode-block" id="test_rem_elements"><a class="viewcode-back" href="../../../src/saltproc.tests.test_process.html#saltproc.tests.test_process.test_rem_elements">[docs]</a><span class="k">def</span> <span class="nf">test_rem_elements</span><span class="p">():</span>
-    <span class="n">mats</span> <span class="o">=</span> <span class="n">serpent</span><span class="o">.</span><span class="n">read_dep_comp</span><span class="p">(</span><span class="n">input_file</span><span class="p">,</span> <span class="kc">True</span><span class="p">)</span>
+    <span class="n">mats</span> <span class="o">=</span> <span class="n">serpent</span><span class="o">.</span><span class="n">read_dep_comp</span><span class="p">(</span><span class="kc">True</span><span class="p">)</span>
     <span class="n">waste</span> <span class="o">=</span> <span class="n">process</span><span class="o">.</span><span class="n">rem_elements</span><span class="p">(</span><span class="n">mats</span><span class="p">[</span><span class="s1">&#39;fuel&#39;</span><span class="p">])</span>
     <span class="n">np</span><span class="o">.</span><span class="n">testing</span><span class="o">.</span><span class="n">assert_almost_equal</span><span class="p">(</span><span class="n">waste</span><span class="p">[</span><span class="mi">541350000</span><span class="p">],</span> <span class="mf">19.79776930513891</span><span class="p">)</span>
     <span class="n">np</span><span class="o">.</span><span class="n">testing</span><span class="o">.</span><span class="n">assert_almost_equal</span><span class="p">(</span><span class="n">waste</span><span class="p">[</span><span class="mi">541360000</span><span class="p">],</span> <span class="mf">176.44741987005173</span><span class="p">)</span>
