--- a/master/genindex.html
+++ b/master/genindex.html
@@ -146,17 +146,21 @@
       </ul></li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.change_sim_par">change_sim_par() (saltproc.depcode.DepcodeSerpent method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.process.html#saltproc.process.Process.check_mass_conservation">check_mass_conservation() (saltproc.process.Process method)</a>
 </li>
-      <li><a href="src/saltproc.app.html#saltproc.app.check_restart">check_restart() (in module saltproc.app)</a>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.check_restart">check_restart() (saltproc.simulation.Simulation method)</a>
 </li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.check_switch_geo_trigger">check_switch_geo_trigger() (saltproc.simulation.Simulation method)</a>
+</li>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.convert_nuclide_name_serpent_to_zam">convert_nuclide_name_serpent_to_zam() (saltproc.depcode.DepcodeSerpent method)</a>
 </li>
       <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.copy_pymat_attrs">copy_pymat_attrs() (saltproc.materialflow.Materialflow method)</a>
 </li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.create_iter_matfile">create_iter_matfile() (saltproc.depcode.DepcodeSerpent method)</a>
+</li>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.create_nuclide_name_map_zam_to_serpent">create_nuclide_name_map_zam_to_serpent() (saltproc.depcode.DepcodeSerpent method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -220,13 +224,11 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.sparger.html#id6">gas_const (saltproc.sparger.Sparger attribute)</a>, <a href="src/saltproc.sparger.html#saltproc.sparger.Sparger.gas_const">[1]</a>
 </li>
-      <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.get_mass">get_mass() (saltproc.materialflow.Materialflow method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.get_nuc_name">get_nuc_name() (saltproc.depcode.DepcodeSerpent method)</a>
+      <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.get_mass">get_mass() (saltproc.materialflow.Materialflow method)</a>
 </li>
-      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.get_tra_or_dec">get_tra_or_dec() (saltproc.depcode.DepcodeSerpent method)</a>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.get_nuc_name">get_nuc_name() (saltproc.depcode.DepcodeSerpent method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -274,8 +276,6 @@
       <ul>
         <li><a href="src/saltproc.html#module-saltproc">saltproc</a>
 </li>
-        <li><a href="src/saltproc.app.html#module-saltproc.app">saltproc.app</a>
-</li>
         <li><a href="src/saltproc.depcode.html#module-saltproc.depcode">saltproc.depcode</a>
 </li>
         <li><a href="src/saltproc.materialflow.html#module-saltproc.materialflow">saltproc.materialflow</a>
@@ -292,8 +292,6 @@
 </li>
         <li><a href="src/saltproc.tests.html#module-saltproc.tests">saltproc.tests</a>
 </li>
-        <li><a href="src/saltproc.tests.test_app.html#module-saltproc.tests.test_app">saltproc.tests.test_app</a>
-</li>
         <li><a href="src/saltproc.tests.test_depcode.html#module-saltproc.tests.test_depcode">saltproc.tests.test_depcode</a>
 </li>
         <li><a href="src/saltproc.tests.test_materialflow.html#module-saltproc.tests.test_materialflow">saltproc.tests.test_materialflow</a>
@@ -301,8 +299,6 @@
         <li><a href="src/saltproc.tests.test_process.html#module-saltproc.tests.test_process">saltproc.tests.test_process</a>
 </li>
         <li><a href="src/saltproc.tests.test_separator.html#module-saltproc.tests.test_separator">saltproc.tests.test_separator</a>
-</li>
-        <li><a href="src/saltproc.tests.test_simulation.html#module-saltproc.tests.test_simulation">saltproc.tests.test_simulation</a>
 </li>
         <li><a href="src/saltproc.tests.test_sparger.html#module-saltproc.tests.test_sparger">saltproc.tests.test_sparger</a>
 </li>
@@ -315,12 +311,10 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.app.html#saltproc.app.parse_arguments">parse_arguments() (in module saltproc.app)</a>
+      <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.print_attr">print_attr() (saltproc.materialflow.Materialflow method)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.print_attr">print_attr() (saltproc.materialflow.Materialflow method)</a>
-</li>
       <li><a href="src/saltproc.process.html#saltproc.process.Process">Process (class in saltproc.process)</a>
 </li>
   </ul></td>
@@ -357,33 +351,27 @@
         <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_dep_comp">(saltproc.depcode.DepcodeSerpent method)</a>
 </li>
       </ul></li>
-      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_depcode_info">read_depcode_info() (saltproc.depcode.DepcodeSerpent method)</a>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.read_depcode_info">read_depcode_info() (saltproc.depcode.Depcode method)</a>
+
+      <ul>
+        <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_depcode_info">(saltproc.depcode.DepcodeSerpent method)</a>
 </li>
-      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_depcode_step_param">read_depcode_step_param() (saltproc.depcode.DepcodeSerpent method)</a>
+      </ul></li>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.read_depcode_step_param">read_depcode_step_param() (saltproc.depcode.Depcode method)</a>
+
+      <ul>
+        <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_depcode_step_param">(saltproc.depcode.DepcodeSerpent method)</a>
 </li>
-      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_depcode_template">read_depcode_template() (saltproc.depcode.DepcodeSerpent method)</a>
-</li>
-      <li><a href="src/saltproc.app.html#saltproc.app.read_dot">read_dot() (in module saltproc.app)</a>
-</li>
-      <li><a href="src/saltproc.app.html#saltproc.app.read_feeds_from_input">read_feeds_from_input() (in module saltproc.app)</a>
-</li>
-      <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.read_k_eds_delta">read_k_eds_delta() (saltproc.simulation.Simulation method)</a>
-</li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.app.html#saltproc.app.read_main_input">read_main_input() (in module saltproc.app)</a>
+      <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.read_k_eds_delta">read_k_eds_delta() (saltproc.simulation.Simulation method)</a>
 </li>
-      <li><a href="src/saltproc.app.html#saltproc.app.read_processes_from_input">read_processes_from_input() (in module saltproc.app)</a>
-</li>
-      <li><a href="src/saltproc.app.html#saltproc.app.refill">refill() (in module saltproc.app)</a>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_plaintext_file">read_plaintext_file() (saltproc.depcode.DepcodeSerpent method)</a>
 </li>
       <li><a href="src/saltproc.process.html#saltproc.process.Process.rem_elements">rem_elements() (saltproc.process.Process method)</a>
 </li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.replace_burnup_parameters">replace_burnup_parameters() (saltproc.depcode.DepcodeSerpent method)</a>
-</li>
-      <li><a href="src/saltproc.app.html#saltproc.app.reprocessing">reprocessing() (in module saltproc.app)</a>
-</li>
-      <li><a href="src/saltproc.app.html#saltproc.app.run">run() (in module saltproc.app)</a>
 </li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.run_depcode">run_depcode() (saltproc.depcode.Depcode method)</a>
 
@@ -391,8 +379,6 @@
         <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.run_depcode">(saltproc.depcode.DepcodeSerpent method)</a>
 </li>
       </ul></li>
-      <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.runsim_no_reproc">runsim_no_reproc() (saltproc.simulation.Simulation method)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -404,13 +390,6 @@
 
       <ul>
         <li><a href="src/saltproc.html#module-saltproc">module</a>
-</li>
-      </ul></li>
-      <li>
-    saltproc.app
-
-      <ul>
-        <li><a href="src/saltproc.app.html#module-saltproc.app">module</a>
 </li>
       </ul></li>
       <li>
@@ -470,13 +449,6 @@
 </li>
       </ul></li>
       <li>
-    saltproc.tests.test_app
-
-      <ul>
-        <li><a href="src/saltproc.tests.test_app.html#module-saltproc.tests.test_app">module</a>
-</li>
-      </ul></li>
-      <li>
     saltproc.tests.test_depcode
 
       <ul>
@@ -507,13 +479,6 @@
 </li>
       </ul></li>
       <li>
-    saltproc.tests.test_simulation
-
-      <ul>
-        <li><a href="src/saltproc.tests.test_simulation.html#module-saltproc.tests.test_simulation">module</a>
-</li>
-      </ul></li>
-      <li>
     saltproc.tests.test_sparger
 
       <ul>
@@ -537,8 +502,6 @@
 </li>
       <li><a href="src/saltproc.sparger.html#saltproc.sparger.Sparger">Sparger (class in saltproc.sparger)</a>
 </li>
-      <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.sss_meta_zzz">sss_meta_zzz() (saltproc.depcode.DepcodeSerpent method)</a>
-</li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.store_after_repr">store_after_repr() (saltproc.simulation.Simulation method)</a>
 </li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.store_mat_data">store_mat_data() (saltproc.simulation.Simulation method)</a>
@@ -547,8 +510,12 @@
 </li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.store_run_step_info">store_run_step_info() (saltproc.simulation.Simulation method)</a>
 </li>
-      <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.switch_to_next_geometry">switch_to_next_geometry() (saltproc.simulation.Simulation method)</a>
+      <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.switch_to_next_geometry">switch_to_next_geometry() (saltproc.depcode.Depcode method)</a>
+
+      <ul>
+        <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.switch_to_next_geometry">(saltproc.depcode.DepcodeSerpent method)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -565,39 +532,29 @@
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_change_sim_par">test_change_sim_par() (in module saltproc.tests.test_depcode)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_convert_nuclide_name_serpent_to_zam">test_convert_nuclide_name_serpent_to_zam() (in module saltproc.tests.test_depcode)</a>
+</li>
       <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_copy_pymat_attrs">test_copy_pymat_attrs() (in module saltproc.tests.test_materialflow)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_create_iter_matfile">test_create_iter_matfile() (in module saltproc.tests.test_depcode)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_create_nuclide_name_map_zam_to_serpent">test_create_nuclide_name_map_zam_to_serpent() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_get_mass">test_get_mass() (in module saltproc.tests.test_materialflow)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_get_nuc_name">test_get_nuc_name() (in module saltproc.tests.test_depcode)</a>
 </li>
-      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_get_tra_or_dec">test_get_tra_or_dec() (in module saltproc.tests.test_depcode)</a>
-</li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_insert_path_to_geometry">test_insert_path_to_geometry() (in module saltproc.tests.test_depcode)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_dep_comp">test_read_dep_comp() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_info">test_read_depcode_info() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_step_param">test_read_depcode_step_param() (in module saltproc.tests.test_depcode)</a>
 </li>
-      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_template">test_read_depcode_template() (in module saltproc.tests.test_depcode)</a>
-</li>
-      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_dot">test_read_dot() (in module saltproc.tests.test_app)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_feeds_from_input">test_read_feeds_from_input() (in module saltproc.tests.test_app)</a>
-</li>
-      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_read_k_eds_delta">test_read_k_eds_delta() (in module saltproc.tests.test_simulation)</a>
-</li>
-      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_main_input">test_read_main_input() (in module saltproc.tests.test_app)</a>
-</li>
-      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_processes_from_input">test_read_processes_from_input() (in module saltproc.tests.test_app)</a>
-</li>
-      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_refill">test_refill() (in module saltproc.tests.test_app)</a>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_plaintext_file">test_read_plaintext_file() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_process.html#saltproc.tests.test_process.test_rem_elements">test_rem_elements() (in module saltproc.tests.test_process)</a>
 
@@ -609,13 +566,9 @@
       </ul></li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_replace_burnup_parameters">test_replace_burnup_parameters() (in module saltproc.tests.test_depcode)</a>
 </li>
-      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_reprocessing">test_reprocessing() (in module saltproc.tests.test_app)</a>
-</li>
       <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_scale_matflow">test_scale_matflow() (in module saltproc.tests.test_materialflow)</a>
 </li>
-      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_sss_meta_zzz">test_sss_meta_zzz() (in module saltproc.tests.test_depcode)</a>
-</li>
-      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_switch_to_next_geometry">test_switch_to_next_geometry() (in module saltproc.tests.test_simulation)</a>
+      <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_switch_to_next_geometry">test_switch_to_next_geometry() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_write_depcode_input">test_write_depcode_input() (in module saltproc.tests.test_depcode)</a>
 </li>
