update docs at commit: Merge pull request #124 from yardasol/missing-docs
Missing docs 498effa53e2484b53e5546b5f069463a06c60960

--- a/master/genindex.html
+++ b/master/genindex.html
@@ -278,6 +278,8 @@
       <ul>
         <li><a href="src/saltproc.html#module-saltproc">saltproc</a>
 </li>
+        <li><a href="src/saltproc.app.html#module-saltproc.app">saltproc.app</a>
+</li>
         <li><a href="src/saltproc.depcode.html#module-saltproc.depcode">saltproc.depcode</a>
 </li>
         <li><a href="src/saltproc.materialflow.html#module-saltproc.materialflow">saltproc.materialflow</a>
@@ -294,6 +296,8 @@
 </li>
         <li><a href="src/saltproc.tests.html#module-saltproc.tests">saltproc.tests</a>
 </li>
+        <li><a href="src/saltproc.tests.test_app.html#module-saltproc.tests.test_app">saltproc.tests.test_app</a>
+</li>
         <li><a href="src/saltproc.tests.test_depcode.html#module-saltproc.tests.test_depcode">saltproc.tests.test_depcode</a>
 </li>
         <li><a href="src/saltproc.tests.test_materialflow.html#module-saltproc.tests.test_materialflow">saltproc.tests.test_materialflow</a>
@@ -301,6 +305,8 @@
         <li><a href="src/saltproc.tests.test_process.html#module-saltproc.tests.test_process">saltproc.tests.test_process</a>
 </li>
         <li><a href="src/saltproc.tests.test_separator.html#module-saltproc.tests.test_separator">saltproc.tests.test_separator</a>
+</li>
+        <li><a href="src/saltproc.tests.test_simulation.html#module-saltproc.tests.test_simulation">saltproc.tests.test_simulation</a>
 </li>
         <li><a href="src/saltproc.tests.test_sparger.html#module-saltproc.tests.test_sparger">saltproc.tests.test_sparger</a>
 </li>
@@ -313,10 +319,12 @@
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.print_attr">print_attr() (saltproc.materialflow.Materialflow method)</a>
+      <li><a href="src/saltproc.app.html#saltproc.app.parse_arguments">parse_arguments() (in module saltproc.app)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.materialflow.html#saltproc.materialflow.Materialflow.print_attr">print_attr() (saltproc.materialflow.Materialflow method)</a>
+</li>
       <li><a href="src/saltproc.process.html#saltproc.process.Process">Process (class in saltproc.process)</a>
 </li>
   </ul></td>
@@ -365,15 +373,29 @@
         <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_depcode_step_param">(saltproc.depcode.DepcodeSerpent method)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.app.html#saltproc.app.read_dot">read_dot() (in module saltproc.app)</a>
+</li>
+      <li><a href="src/saltproc.app.html#saltproc.app.read_feeds_from_input">read_feeds_from_input() (in module saltproc.app)</a>
+</li>
       <li><a href="src/saltproc.simulation.html#saltproc.simulation.Simulation.read_k_eds_delta">read_k_eds_delta() (saltproc.simulation.Simulation method)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.app.html#saltproc.app.read_main_input">read_main_input() (in module saltproc.app)</a>
+</li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.read_plaintext_file">read_plaintext_file() (saltproc.depcode.DepcodeSerpent method)</a>
+</li>
+      <li><a href="src/saltproc.app.html#saltproc.app.read_processes_from_input">read_processes_from_input() (in module saltproc.app)</a>
+</li>
+      <li><a href="src/saltproc.app.html#saltproc.app.refill">refill() (in module saltproc.app)</a>
 </li>
       <li><a href="src/saltproc.process.html#saltproc.process.Process.rem_elements">rem_elements() (saltproc.process.Process method)</a>
 </li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.DepcodeSerpent.replace_burnup_parameters">replace_burnup_parameters() (saltproc.depcode.DepcodeSerpent method)</a>
+</li>
+      <li><a href="src/saltproc.app.html#saltproc.app.reprocessing">reprocessing() (in module saltproc.app)</a>
+</li>
+      <li><a href="src/saltproc.app.html#saltproc.app.run">run() (in module saltproc.app)</a>
 </li>
       <li><a href="src/saltproc.depcode.html#saltproc.depcode.Depcode.run_depcode">run_depcode() (saltproc.depcode.Depcode method)</a>
 
@@ -392,6 +414,13 @@
 
       <ul>
         <li><a href="src/saltproc.html#module-saltproc">module</a>
+</li>
+      </ul></li>
+      <li>
+    saltproc.app
+
+      <ul>
+        <li><a href="src/saltproc.app.html#module-saltproc.app">module</a>
 </li>
       </ul></li>
       <li>
@@ -451,6 +480,13 @@
 </li>
       </ul></li>
       <li>
+    saltproc.tests.test_app
+
+      <ul>
+        <li><a href="src/saltproc.tests.test_app.html#module-saltproc.tests.test_app">module</a>
+</li>
+      </ul></li>
+      <li>
     saltproc.tests.test_depcode
 
       <ul>
@@ -478,6 +514,13 @@
 
       <ul>
         <li><a href="src/saltproc.tests.test_separator.html#module-saltproc.tests.test_separator">module</a>
+</li>
+      </ul></li>
+      <li>
+    saltproc.tests.test_simulation
+
+      <ul>
+        <li><a href="src/saltproc.tests.test_simulation.html#module-saltproc.tests.test_simulation">module</a>
 </li>
       </ul></li>
       <li>
@@ -534,6 +577,8 @@
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_change_sim_par">test_change_sim_par() (in module saltproc.tests.test_depcode)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_check_switch_geo_trigger">test_check_switch_geo_trigger() (in module saltproc.tests.test_simulation)</a>
+</li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_convert_nuclide_name_serpent_to_zam">test_convert_nuclide_name_serpent_to_zam() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_copy_pymat_attrs">test_copy_pymat_attrs() (in module saltproc.tests.test_materialflow)</a>
@@ -548,15 +593,27 @@
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_insert_path_to_geometry">test_insert_path_to_geometry() (in module saltproc.tests.test_depcode)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_dep_comp">test_read_dep_comp() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_info">test_read_depcode_info() (in module saltproc.tests.test_depcode)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_depcode_step_param">test_read_depcode_step_param() (in module saltproc.tests.test_depcode)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_dot">test_read_dot() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_feeds_from_input">test_read_feeds_from_input() (in module saltproc.tests.test_app)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_read_k_eds_delta">test_read_k_eds_delta() (in module saltproc.tests.test_simulation)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_main_input">test_read_main_input() (in module saltproc.tests.test_app)</a>
+</li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_read_plaintext_file">test_read_plaintext_file() (in module saltproc.tests.test_depcode)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_read_processes_from_input">test_read_processes_from_input() (in module saltproc.tests.test_app)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_refill">test_refill() (in module saltproc.tests.test_app)</a>
 </li>
       <li><a href="src/saltproc.tests.test_process.html#saltproc.tests.test_process.test_rem_elements">test_rem_elements() (in module saltproc.tests.test_process)</a>
 
@@ -568,7 +625,17 @@
       </ul></li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_replace_burnup_parameters">test_replace_burnup_parameters() (in module saltproc.tests.test_depcode)</a>
 </li>
+      <li><a href="src/saltproc.tests.test_app.html#saltproc.tests.test_app.test_reprocessing">test_reprocessing() (in module saltproc.tests.test_app)</a>
+</li>
       <li><a href="src/saltproc.tests.test_materialflow.html#saltproc.tests.test_materialflow.test_scale_matflow">test_scale_matflow() (in module saltproc.tests.test_materialflow)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_store_after_repr">test_store_after_repr() (in module saltproc.tests.test_simulation)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_store_mat_data">test_store_mat_data() (in module saltproc.tests.test_simulation)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_store_run_init_info">test_store_run_init_info() (in module saltproc.tests.test_simulation)</a>
+</li>
+      <li><a href="src/saltproc.tests.test_simulation.html#saltproc.tests.test_simulation.test_store_run_step_info">test_store_run_step_info() (in module saltproc.tests.test_simulation)</a>
 </li>
       <li><a href="src/saltproc.tests.test_depcode.html#saltproc.tests.test_depcode.test_switch_to_next_geometry">test_switch_to_next_geometry() (in module saltproc.tests.test_depcode)</a>
 </li>
